# ZUpdater

./: .gitignore  AUTHORS  CMakeLists.txt  LICENSE
cmake/: ZUpdaterConfig.cmake.in
example/: CMakeLists.txt  mainwindow.cpp
src/: ZDownloader.cpp  ZDownloader.h  ZDownloader.ui  ZUpdater.cpp  ZUpdater.h
